--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
 <!doctype html>
 <html lang="de">
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <titel>Philosoph Schnerider</titel>
+    <style> 
+    body { 
+    font-family: Arial
+      padding: 40px
+    }
+      .Überschrift {
+        diplay: flex
+        align-items: left
+      </style>
+  </head>
+  <body>
+    <div class="Überschrift">
+      <h1> Philosoph Schneider</h1>
+      <h2>Sie wissen, Wir versuchen zu denken</h2>
+    </div>
+    
+  </body>
   
