--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <titel>Philosoph Schnerider</titel>
     <style> 
     body { 
-    font-family: Arial
+      font-family: Arial, sani-serif;
+      background-color: #f5f5f5;
       padding: 40px
     }
       .Überschrift {
