--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="de">
   <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <titel>Philosoph Schnerider</titel>
+  <meta name="viewport" content="width=device-width, initial-scale=5.0">
+  <titel>Philosoph Schneider</titel>
     <style> 
     body { 
       font-family: Arial, sani-serif;
