--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <body>
     <div class="Überschrift">
       <h1> Philosoph Schneider</h1>
-      <h2>Sie wissen, Wir versuchen zu denken</h2>
+    </div>
+    <div class="Über Freddi">
+      <p>Frederic Schneider</p>
     </div>
     
   </body>
