--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=200.0">
-  <titel>Philosoph Schneider</titel>
+  <div class="titel"
+    <titel>Philosoph Schneider</titel>
+  </div>
     <style> 
+      titel {
+        font-family: Georgia, serif;
+        align-items: center
     body { 
       font-family: Arial, sani-serif;
       background-color: #f5f5f5;
