--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=200.0">
   <div class="titel"
-    <titel>Philosoph Schneider</titel>
+    <titel>      </titel>
   </div>
     <style> 
       titel {
         font-family: Georgia, serif;
         align-items: center
     body { 
-      font-family: Arial, sani-serif;
+      font-family: Georgia, serif;
       background-color: #f5f5f5;
       padding: 40px
     }
       .Überschrift {
         diplay: flex
-        align-items: left
+        align-items: center
       </style>
   </head>
   <body>
