--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         diplay: flex
         align-items: center
       }
-        
+        .Überschrift h1 {
+          margin: 0 0 10px 0;
+        }
       </style>
   </head>
   <body>
