--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background-color: #f5f5f5;
       padding: 40px
     }
-      .Überschrift {
+      .Überschrift h1 {
         diplay: flex
         align-items: center
       }
