--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
       background-color: #f5f5f5;
       padding: 40px
     }
-      .Überschrift h1 {
+      .Überschrift {
         diplay: flex
         align-items: center
       }
         .Überschrift h1 {
+          justify-content: center 
           margin: 0 0 10px 0;
         }
       </style>
