--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
         font-family: Georgia, serif;
         align-items: center
     body { 
-      font-family: Georgia, serif;
-      background-color: #f5f5f5;
-      padding: 40px
+     height: 100%;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center; 
+      font-family: 'Georgia', serif; 
+      background-color: #f0f0f0
     }
       .Überschrift {
         diplay: flex
