--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
       background-color: #f0f0f0
     }
       .Überschrift {
-        diplay: flex
-        align-items: center
+      text-align: center; 
+      padding: 20px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
-        .Überschrift h1 {
-          justify-content: center 
-          margin: 0 0 10px 0;
-        }
       </style>
   </head>
   <body>
