--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=200.0">
-  <div class="titel"
     <titel>      </titel>
-  </div>
-    <style> 
-      titel {
-        font-family: Georgia, serif;
-        align-items: center
+    <style>
     body { 
      height: 100%;
       margin: 0;
@@ -35,6 +30,6 @@
     <div class="Über Freddi">
       <p>Frederic Schneider</p>
     </div>
-    
   </body>
-  
+</html>
+
