--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <titel>      </titel>
     <style>
     body { 
-     height: 100%;
+    . height: 100%;
       margin: 0;
       display: flex;
       justify-content: center;
