--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
+      .Über Freddi {
+      text-align: left; 
+      padding: 20px;
+      background-color: white;
+      }
       </style>
   </head>
   <body>
