--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
-      .Über Freddi {
+      .Über-Freddi {
       text-align: left; 
       padding: 20px;
       background-color: white;
@@ -32,7 +32,7 @@
     <div class="Überschrift">
       <h1> Philosoph Schneider</h1>
     </div>
-    <div class="Über Freddi">
+    <div class="Über-Freddi">
       <p>Frederic Schneider</p>
     </div>
   </body>
